cluster/apps/openwebui/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  namespace: openwebui
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - openwebui.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 8080
