cluster/apps/openwebui/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: openwebui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`openwebui.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: open-webui
          namespace: openwebui
          port: 8080
  tls: {}
